# MyRepository

./: README.md
Algorithm/: a.cpp  aa
Algorithm/BFS/: FindShortestPathInMaze_BFS.cpp
Algorithm/DFS/: POJ_2386.cpp  combination.cpp  numberSumSatisfyValue_DFS.cpp  permutation.cpp
Algorithm/DP/: 01_package.cpp  LCS.cpp  completePakage.cpp  multiple_part_sum.cpp  two_array_combine_find_min_mul_sum.cpp
Algorithm/Graph/: minimum_spanning_tree.cpp  single_source_shortest_path.cpp  two_color_diagram.cpp
Algorithm/Greedy/: HuffmanCoding.cpp  POJ_2431.cpp  POJ_3069.cpp  POJ_3253.cpp  POJ_3617.cpp  coins.cpp  maxJobs.cpp
C++/Class/: autoPtr.cpp  sharedPtr.cpp  smartPtr.cpp
C++/STL/: algorithm.cpp  deque.cpp  list.cpp  map.cpp  multimap.cpp  priority_queue.cpp  set.cpp  strtok.cpp  vector.cpp
Imitation/Imitation_Python/: Altono.py  Altono.py~  Imitation.py  Imitation.py~  Imitation2.py~  Imitation_SingleFrame.py~  Imitation_SingleFrame_Lower.py~  Imitation_SingleFrame_WholeBody.py  Imitation_SingleFrame_WholeBody.py~  Imitation_file.py  Imitation_file.py~  Imitation_file2.py  Imitation_file2_noCheck.py  Imitation_file2_noCheck.py~  Imitation_file2_noCheck_balance.py  Imitation_file2_noCheck_balance.py~  Imitation_file2_noCheck_hands.py  Imitation_file2_noCheck_hands.py~  Imitation_grasp.py  Imitation_offline.py  Imitation_offline.py~  Imitation_smoothy.py  Imitation_smoothy.py~  a.py~  err.txt~  main.py~  orders.txt  orders.txt~  posture.txt  posture.txt~  rest.py  rest.py~  rhandz.txt~  test.py  test.py~  test2.py  test2.py~  test3.py~  test4.py  test4.py~  (+1 more)
Imitation_IK _with_Limits/: DLS.m  main_IK_FK.m
Imitation_IK _with_Limits/Basic/: Joint.m  rot2omega.m  rpy2rot.m
Imitation_IK _with_Limits/ZMP/: calcCoM.m
KinectSDK_CaptutringSkeletonData/: ConsoleApplication1.sln
KinectSDK_CaptutringSkeletonData/ConsoleApplication1/: ConsoleApplication1.vcxproj  funcinv.cpp  funcinv_initialize.h  funcinv_terminate.cpp  funcinv_types.h  funcpinv_initialize.h  log.cpp  (+15 more)
XDDH_4e_fd/: 说明4.txt
XDDH_5e_fd/: 说明5.txt
slam/rgbd-slam/src/: CMakeLists.txt  main.cpp  slam.cpp  slamBase.cpp  slamEnd.cpp
workspace/src/my_package/src/: CMakeLists.txt  add_two_ints_client.cpp  add_two_ints_server.cpp  he.cpp  listener.cpp  talker.cpp
(+429 files in other folders)
