FIND_PACKAGE( PCL REQUIRED COMPONENTS common io visualization filters)
FIND_PACKAGE( OpenCV REQUIRED )
ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS} )
LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )
# 因为g2o不是常用库，要添加它的findg2o.cmake文件
LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
SET(G2O_ROOT /usr/local/include/g2o)
FIND_PACKAGE(G2O REQUIRED)
# CSparse
FIND_PACKAGE( CSparse REQUIRED)
INCLUDE_DIRECTORIES( ${G2O_INCLUDE_DIR} ${CSPARSE_INCLUDE_DIR} )
ADD_LIBRARY(slamBase slamBase.cpp)
TARGET_LINK_LIBRARIES(slamBase ${OpenCV_LIBS} ${PCL_LIBRARIES})
ADD_EXECUTABLE( main main.cpp )
TARGET_LINK_LIBRARIES( main slamBase )
ADD_EXECUTABLE( slamEnd slamEnd.cpp )
TARGET_LINK_LIBRARIES( slamEnd slamBase ${OpenCV_LIBS} ${PCL_LIBRARIES} g2o_core g2o_types_slam3d g2o_solver_csparse g2o_stuff g2o_csparse_extension ${CSPARSE_LIBRARY})
ADD_EXECUTABLE( slam slam.cpp )
TARGET_LINK_LIBRARIES( slam slamBase ${OpenCV_LIBS} ${PCL_LIBRARIES} g2o_core g2o_types_slam3d g2o_solver_csparse g2o_stuff g2o_csparse_extension ${CSPARSE_LIBRARY})
